tests/fsharp/typecheck/sigs/neg96.bsl

neg95.fs(11,9,11,21): typecheck error FS0039: The value or constructor 'StructRecord' is not defined

neg96.fs(14,17,14,18): typecheck error FS3205: This feature is deprecated. A 'use' binding may not be marked 'mutable'.